Add observer methods.

--- a/part1/SimpleAngApp/src/app/footer/footer.component.html
+++ b/part1/SimpleAngApp/src/app/footer/footer.component.html
@@ -2,3 +2,4 @@
 <p>A footer!!!</p>
 <p>Last accessed: {{lastAccessed}}</p>
 <button (click)="addBook()">Add a book</button>
+<button (click)="addBookByBob()">Add a book by Bob</button>
