Add test module.

--- a/part1/SimpleAngApp/src/app/app.component.html
+++ b/part1/SimpleAngApp/src/app/app.component.html
@@ -1,4 +1,5 @@
 
+<h1>A Simple Angular App</h1>
 <app-header (pageChangedEvent)="incrementHitCounter($event)" ></app-header>
 <app-page1 [hidden]="currentPage !== '1'"></app-page1>
 <app-page2 [hidden]="currentPage !== '2'" #page2></app-page2>
