--- a/part1/SimpleAngApp/src/app/page1/page1.component.html
+++ b/part1/SimpleAngApp/src/app/page1/page1.component.html
@@ -1,3 +1,3 @@
-<p>This is the First page</p>
+<h1>This is the First page</h1>
 <p>There are {{dataService.books.length}} books in the database.</p>
 <p> Num books written by Steve: {{numByAuthor}}</p>
